[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/ui/startup/Startup.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/font/ArizoneUnicaseRegular-5dRZ.ttf"

[sub_resource type="DynamicFont" id=2]
size = 32
extra_spacing_space = -9
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/font/RussoOne-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 14
extra_spacing_char = 3
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Assets/font/RussoOne-Regular.ttf"

[sub_resource type="DynamicFont" id=6]
size = 14
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Assets/font/RussoOne-Regular.ttf"

[sub_resource type="DynamicFont" id=8]
extra_spacing_char = 3
font_data = SubResource( 7 )

[node name="Startup" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 100.0
margin_top = 100.0
margin_right = 924.0
margin_bottom = 476.0
custom_constants/separation = 82

[node name="WiosLabel" type="Label" parent="VBox"]
margin_right = 824.0
margin_bottom = 46.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "WASTED IN OUTTA SPACE"
align = 1

[node name="VBox" type="VBoxContainer" parent="VBox"]
margin_top = 128.0
margin_right = 824.0
margin_bottom = 254.0
custom_constants/separation = 15

[node name="WarningLabel" type="Label" parent="VBox/VBox"]
margin_right = 824.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "First time? Just enter a username and password and click on 'register'!"
align = 1

[node name="Margin" type="MarginContainer" parent="VBox/VBox"]
margin_top = 32.0
margin_right = 824.0
margin_bottom = 126.0
custom_constants/margin_right = 250
custom_constants/margin_left = 250

[node name="VBox" type="VBoxContainer" parent="VBox/VBox/Margin"]
margin_left = 250.0
margin_right = 574.0
margin_bottom = 94.0
custom_constants/separation = 7

[node name="UsernameLineEdit" type="LineEdit" parent="VBox/VBox/Margin/VBox"]
margin_right = 324.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 6 )
align = 1
max_length = 24
context_menu_enabled = false
placeholder_text = "enter your username"

[node name="PasswordLineEdit" type="LineEdit" parent="VBox/VBox/Margin/VBox"]
margin_top = 34.0
margin_right = 324.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 6 )
align = 1
max_length = 16
secret = true
placeholder_text = "enter your password"

[node name="Center" type="CenterContainer" parent="VBox/VBox/Margin/VBox"]
margin_top = 68.0
margin_right = 324.0
margin_bottom = 94.0

[node name="HBox" type="HBoxContainer" parent="VBox/VBox/Margin/VBox/Center"]
margin_left = 72.0
margin_right = 252.0
margin_bottom = 26.0
custom_constants/separation = 18

[node name="RegisterButton" type="Button" parent="VBox/VBox/Margin/VBox/Center/HBox"]
margin_right = 98.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 8 )
text = "register"
flat = true

[node name="LoginButton" type="Button" parent="VBox/VBox/Margin/VBox/Center/HBox"]
margin_left = 116.0
margin_right = 180.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 8 )
shortcut_in_tooltip = false
text = "login"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBox/VBox/Margin/VBox/Center/HBox/RegisterButton" to="." method="_on_RegisterButton_pressed"]
[connection signal="pressed" from="VBox/VBox/Margin/VBox/Center/HBox/LoginButton" to="." method="_on_LoginButton_pressed"]
